crates/musli/tests/ui/enum_content_tag_error.stderr
error: #[musli(packed)] cannot be combined with #[musli(tag)] or #[musli(content)]
 --> tests/ui/enum_content_tag_error.rs:4:9
  |
4 | #[musli(packed, tag = "type")]
  |         ^^^^^^

error: #[musli(packed)] cannot be used to decode enums
  --> tests/ui/enum_content_tag_error.rs:10:9
   |
10 | #[musli(packed, content = "content")]
   |         ^^^^^^

error: #[musli(packed)] cannot be combined with #[musli(tag)] or #[musli(content)]
  --> tests/ui/enum_content_tag_error.rs:16:9
   |
16 | #[musli(packed, tag = "type", content = "content")]
   |         ^^^^^^

error: #[musli(transparent)] cannot be combined with #[musli(tag)] or #[musli(content)]
  --> tests/ui/enum_content_tag_error.rs:22:9
   |
22 | #[musli(transparent, tag = "type")]
   |         ^^^^^^^^^^^

error: #[musli(transparent)] cannot be used to encode enums
  --> tests/ui/enum_content_tag_error.rs:28:9
   |
28 | #[musli(transparent, content = "content")]
   |         ^^^^^^^^^^^

error: #[musli(transparent)] cannot be combined with #[musli(tag)] or #[musli(content)]
  --> tests/ui/enum_content_tag_error.rs:34:9
   |
34 | #[musli(transparent, tag = "type", content = "content")]
   |         ^^^^^^^^^^^
